# simple-network

./: Cargo.toml  README.md
device/: Cargo.toml
device/src/: main.rs
example/: Cargo.toml
example/src/: client.rs  server.rs
hub/: Cargo.toml  build.rs
hub/src/: device.rs  device_hub.rs  main.rs  proto.rs  service.rs
proto/: hub_proto.proto
simple-network/: Cargo.toml
simple-network/src/: acceptor.rs  channel.rs  client.rs  connector.rs  factory.rs  lib.rs  packet.rs  reader.rs  rpc_client.rs  rpc_server.rs  server.rs  writer.rs
