[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
simple-network = {path = "../simple-network"}
tokio = {version = "1.34.0", features = ["full"] }
bytes = "1.5.0"
bytebuffer = "2.2.0"
anyhow = "1.0.75"


[[bin]]
name ="client"
path ="src/client.rs"

[[bin]]
name ="server"
path ="src/server.rs"